--- a/src/Components/Abstract/Abstract.css
+++ b/src/Components/Abstract/Abstract.css
@@ -2,11 +2,12 @@
 
 .abstract {
     background-color: grey !important;
-    
+    margin-top: 60px;
 }
 
 
 .galleryContainer {
+   
     text-align: center;
     max-width: 80vw;
     margin : 0 auto;
