--- a/src/Components/Abstract/Abstract.css
+++ b/src/Components/Abstract/Abstract.css
@@ -9,7 +9,7 @@
 .galleryContainer {
    
     text-align: center;
-    max-width: 80vw;
+    max-width: 80%;
     margin : 0 auto;
     height: 100%;
    
